// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractJsDoc should extract a broken docblock 1`] = `
"/**
 * This is a broken docblock
   * but it's still a docblock
*/"
`;

exports[`extractJsDoc should extract a multiline docblock 1`] = `
"/**
 * This is a multiline docblock
 */"
`;

exports[`extractJsDoc should extract a single line docblock 1`] = `"  /** This is a single line docblock */"`;

exports[`extractJsDoc should extract a weird two-line docblock 1`] = `
"/**
    * This is a weird two-line docblock */"
`;

exports[`extractJsDoc should not extract a non-docblock 1`] = `""`;
